<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bin Card</string>
    <string name="textoInput">Ingrese 6 digitos</string>
    <string name="textoBoton">Consultar Bin</string>
    <string name="Banco">Banco</string>
    <string name="Scheme">Scheme</string>
    <string name="type" tools:ignore="ExtraTranslation">Tipo</string>
    <string name="brand" tools:ignore="ExtraTranslation">Brand</string>
</resources>
