<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusableInTouchMode="true" >



<android.support.constraint.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />


    <android.support.constraint.Guideline
        android:id="@+id/guidelineRigth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineCenterLineVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaBin"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/guidelineRigth"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintBottom_toTopOf="@id/botonConsulta">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cajaBinn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese 6 digitos"
            android:maxLength="6"
            android:inputType="number"
            android:gravity="center_horizontal"/>

    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/botonConsulta"
        android:text="@string/textoBoton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRigth"
        app:layout_constraintTop_toBottomOf="@id/cajaBin"/>

    <TextView
        android:layout_width="100dp"
        android:id="@+id/labelBanco"
        android:layout_height="wrap_content"
        android:text="@string/Banco"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
        app:layout_constraintRight_toRightOf="@id/guidelineCenterLineVer"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintBottom_toBottomOf="@id/cajaType"/>

    <EditText
        android:id="@+id/cajaBanco"
        android:layout_width="150dp"
        android:textSize="15dp"
        android:textColor="@color/blackBlock"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/guidelineCenterLineVer"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/labelBanco"
        app:layout_constraintBottom_toBottomOf="@id/labelScheme"
        app:layout_constraintVertical_bias="0.3"
        android:enabled="false"/>

    <TextView
        android:layout_width="100dp"
        android:textSize="17dp"
        android:layout_height="wrap_content"
        android:id="@+id/labelScheme"
        android:text="@string/Scheme"
        app:layout_constraintTop_toBottomOf="@id/cajaBanco"
        app:layout_constraintBottom_toTopOf="@id/cajaScheme"
        app:layout_constraintVertical_bias="0.94"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineCenterLineVer" />

    <EditText
        android:layout_width="150dp"
        android:id="@+id/cajaScheme"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/guidelineCenterLineVer"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/blackBlock"
        android:enabled="false"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:id="@+id/labelType"
        android:text="@string/type"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
        app:layout_constraintRight_toRightOf="@id/guidelineRigth"
        app:layout_constraintLeft_toLeftOf="@id/guidelineCenterLineVer"
        app:layout_constraintBottom_toBottomOf="@id/cajaType" />

    <EditText
        android:id="@+id/cajaType"
        android:layout_width="150dp"
        android:textSize="15dp"
        android:textColor="@color/blackBlock"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/guidelineRigth"
        app:layout_constraintLeft_toLeftOf="@id/guidelineCenterLineVer"
        app:layout_constraintTop_toTopOf="@id/labelType"
        app:layout_constraintBottom_toBottomOf="@id/labelBrand"
        app:layout_constraintVertical_bias="0.3"
        android:enabled="false"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/labelBrand"
        android:textSize="17dp"
        android:text="@string/brand"
        app:layout_constraintTop_toBottomOf="@id/cajaBanco"
        app:layout_constraintBottom_toTopOf="@id/cajaScheme"
        app:layout_constraintVertical_bias="0.94"
        app:layout_constraintLeft_toLeftOf="@id/guidelineCenterLineVer"
        app:layout_constraintRight_toRightOf="@id/guidelineRigth" />

    <EditText
        android:id="@+id/cajaBrand"
        android:layout_width="150dp"
        android:textSize="15dp"
        android:textColor="@color/blackBlock"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/guidelineRigth"
        app:layout_constraintLeft_toLeftOf="@id/guidelineCenterLineVer"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false"/>


</android.support.constraint.ConstraintLayout>